--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,11 @@
   box-sizing: border-box;
 }
 
-:root {
+html,
+body,
+#root {
+  width: 100%;
+  height: 100%;
+  background: #1e1e1e;
   font-size: 62.5%;
 }
