style : スクロールバーのスタイリング

--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,16 @@ body,
   background: #1e1e1e;
   font-size: 62.5%;
 }
+
+::-webkit-scrollbar {
+  height: 0.5rem;
+  width : 0.5rem;
+}
+::-webkit-scrollbar-track {
+  background-color: #4f4e4e;
+  border-radius   : 100px;
+}
+::-webkit-scrollbar-thumb {
+  background-color: #777777;
+  border-radius   : 100px;
+}
