--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@ body,
   height: 100%;
   background: #1e1e1e;
   font-size: 62.5%;
+  font-family: 'Black Ops One', cursive;
 }
 
 ::-webkit-scrollbar {
