--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@ body,
 #root {
   width: 100%;
   height: 100%;
-  background: #1e1e1e;
+  background: #303841;
   font-size: 62.5%;
   font-family: 'Black Ops One', cursive;
 }
